# EvolveAI_AgenticSprint_HackOps

./: README.md  requirements.txt
backend/: .env  .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: Schema.py  docling_parser.py  llm_clients.py  main.py  schemas.py  workflow.py
backend/app/agents/: advisory_agent.py  classification_agent.py  ingestion_agent.py  risk_agent.py
backend/frontend/: frontend.py  frontend_new.py
