[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "google-genai>=1.36.0",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-docling>=1.1.0",
    "langgraph>=0.6.7",
    "plotly>=6.3.0",
    "pydantic>=2.11.9",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.1.0",
    "spacy>=3.8.7",
    "streamlit>=1.49.1",
    "uvicorn>=0.35.0",
]
